# yugioh-scraper

./: .gitignore  CLAUDE.md  pyproject.toml  things_to_take_note.txt  yugioh_rarities.csv  yugioh_sets.csv
.github/workflow/: semantic-release.yml
.github/workflows/: ci.yml  semantic-release.yml
app/vscode/: ygo_inventory_main.py
config/: .pypirc  pip.conf
src/civiltekk_yugioh_scraper/: __init__.py
src/civiltekk_yugioh_scraper/v1/: config.py
src/civiltekk_yugioh_scraper/v1/models/: __init__.py  bigweb_models.py  card_price_models.py  ygo_models.py  yugipedia_models.py
src/civiltekk_yugioh_scraper/v1/prod/: CardListScraper2.py  YGOInventoryExport.py  YGOInventoryUpload.py  __init__.py  bigwebscrape.py  card_list_scraper.py  hitpay_income.py  jetson_main.py  set_card_list_scraper.py  tcgcorner_scraper.py  test_scrape.py  ygo_inventory_export.py  ygo_inventory_upload.py  yuyuteiscrape2.py
src/civiltekk_yugioh_scraper/v1/utilities/: YugiohInventoryTelegramUpdate.py  aws_utilities.py  logger.py  misc_utilities.py  set_card_list_scraper.py  yugipedia_utilities.py
src/civiltekk_yugioh_scraper/v1/utilities/woocommerce/: images.py  products.py
src/civiltekk_yugioh_scraper/v1/utilities/yugipedia/: mediawiki_params.py  misc_utilities.py  yugipedia_scraper_card_v2.py  yugipedia_scraper_rarity_v2.py  yugipedia_scraper_set_card.py  yugipedia_scraper_set_v2.py
src/civiltekk_yugioh_scraper/v2/prod/: tcg_corner_scraper.py
src/yugioh_scraper/v1/models/: yugipedia_models.py
src/yugioh_scraper/v1/prod/: bigwebscrape.py  yuyuteiscrape2.py
src/yugioh_scraper/v1/utilities/: WoocommerceDuplicatedRowRemover.py  __init__.py  aws_utilities.py  misc_utilities.py
src/yugioh_scraper/v1/utilities/yugipedia/: yugipedia_scraper_card_v2.py  yugipedia_scraper_rarity_v2.py  yugipedia_scraper_set_v2.py
tests/v2/prod/: test_tcg_corner_scraper.py
